# cpp_linux

./: .gitignore  README.md  cmd.txt  install.sh
Program1/: CMakeLists.txt  main.cpp
Program2/: CMakeLists.txt
Program2/src/: CMakeLists.txt  cmd_discovery.hpp  cmd_executor.hpp  custom_exceptions.hpp  definitions.h  drawer.hpp  icmd_discovery.h  icmd_executor.h  idrawer.h  main.cpp
Program2/test/: CMakeLists.txt
Program2/test/testCmdExecutor/: CMakeLists.txt  mockDrawer.h  testCmdExecutor.cpp  testCmdExecutor.h
